# aws-platform-engineering

ami/: .gitignore  main.tf  providers.tf
api_gateway/: README.md  main.tf  vars.tf
api_task/: README.md  lb.tf  main.tf  scaler.tf  vars.tf
api_task_fargate/: .gitlab-ci.yml  lb.tf  main.tf  scaler.tf  vars.tf
cloudwatch/: README.md  main.tf  outputs.tf  providers.tf  variables.tf
ec2-instance/: README.md  main.tf  outputs.tf  variables.tf
ecr/: .gitignore  .gitlab-ci.yml  README.md  main.tf  outputs.tf  variables.tf
ecs-ec2-web-task/: .gitignore  README.md  main.tf  variables.tf
ecs-fargate-nlb/: .tflint.hcl  alarm.tf  lb.tf  main.tf  scaler.tf  variables.tf
large-media-converter/: .gitignore  .gitlab-ci.yml  Dockerfile  README.md  config.tf  docker.tf  gateway.tf  iam.tf  lambda.tf  logs.tf  main.tf  output.tf  pyproject.toml  s3.tf  sns.tf  variables.tf
large-media-converter/examples/frontend/src/: App.js
large-media-converter/examples/frontend/src/utils/: upload.js
large-media-converter/lambdas/: Dockerfile  requirements.txt
large-media-converter/lambdas/src/: auth.py  complete_video.py  errors.py  finalize.py  initialize.py  mediainfo.py  models.py  presign_urls.py  process_audio.py  process_image.py  submit_video.py  utils.py
large-media-converter/tests/: test_auth.py  test_complete_video.py  test_finalize.py  test_initialize.py  test_mediainfo.py  test_presign_urls.py  test_process_audio.py  test_process_image.py  test_submit_video.py  test_utils.py
large-media-converter/tests/assets/: job-config.json  mediaconvert_details.json
(+100 files in other folders)
